--- a/index.html
+++ b/index.html
@@ -8,7 +8,6 @@
     <title>Bytehost</title>
 </head>
 <body>
-    <h1>Bytehost</h1>
     <div class="container">
         <div class="navbar-container">
             <nav>
@@ -17,7 +16,7 @@
                     <li><a href="#">Home</a></li>
                     <li><a href="#">Planos</a></li>
                     <li><a href="#">Contato</a></li>
-                    <li><a href="#" class="defalt-btn">Login</a></li>
+                    <li><a href="#" class="default-btn">Login</a></li>
                 </ul>
             </nav>
         </div>
@@ -27,7 +26,7 @@
                 <h1>Bytehost</h1>
                 <p>Os melhores planos para qualquer tipo de projeto!</p>
             </div>
-            <section class="specialities-container">
+            <section class="specialties-container">
                 <ul>
                     <li>
                         <i class="fas fa-shield-alt"></i>
