--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
                 </div>
             </section>
             <section class="searchdomain-container">
-                <h2>uscar um domínio</h2>
+                <h2>Buscar um domínio</h2>
                 <p>Veja se o domínio que você deseja está disponível</p>
                 <form>
                     <input type="text" name="domain" placeholder="Digite seu domínio desejado">
